--- a/package.json
+++ b/package.json
@@ -6,10 +6,16 @@
   "author": "HaruHNi <haruhni@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "d3": "^7.0.0"
+    "@emotion/react": "^11.4.0",
+    "d3": "^7.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@emotion/babel-preset-css-prop": "^11.2.0",
     "@types/d3": "^6.7.0",
+    "@types/react": "^17.0.11",
+    "@types/react-dom": "^17.0.7",
     "@typescript-eslint/eslint-plugin": "^4.26.1",
     "@typescript-eslint/parser": "^4.26.1",
     "@webpack-cli/generators": "^2.2.0",
@@ -32,6 +38,6 @@
     "build:dev": "webpack --mode=development",
     "build:prod": "webpack --mode=production --node-env=production",
     "watch": "webpack --watch",
-    "serve": "webpack serve"
+    "serve:react": "webpack serve --config webpack.react.config.js"
   }
 }
